--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,34 @@
-# Environment files (never commit secrets)
-.env.local
-.env
-*.env
-
-# Node modules
+# Dependencies
 node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Build outputs
-dist/
 build/
-*.tsbuildinfo
+dist/
+out/
 
-# Cache directories
+# Cache
 .cache/
 .parcel-cache/
 
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# IDE files
+# IDE
 .vscode/
 .idea/
-*.swp
-*.swo
+
+# OS
+.DS_Store
+Thumbs.db
 
 # Hardhat
 cache/
 artifacts/
-typechain/
-typechain-types/
 
-# Coverage reports
-coverage/
-coverage.json
+# Documentation files (exclude from repository)
+ERC-7857.md
+ERC7857_Extension.markdown
